# Jump-Bump

./: .gitignore  Makefile  README.md  Skoczki  Skoczki.pro  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  mytimer.cpp  mytimer.h  serv  server.cpp  serverConstants.h  serverMain.cpp
Jump-Bump-master/: Skoczki.pro  main.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.ui
Jump-Bump-master/img/: images.qrc
img/: images.qrc  serverMain.cpp
server/: CMakeLists.txt  compile.sh  serverConstants.cpp  serverConstants.h  serverGame.cpp  serverGame.h  serverMain.cpp  serverPlayer.cpp  serverPlayer.h  serverPlayerFunctions.cpp
server/src/: CMakeLists.txt  serverConstants.h  serverGame.cpp  serverGame.h  serverMain.cpp  serverPlayer.cpp  serverPlayer.h  serverPlayerFunctions.cpp  serverPlayerFunctions.h
